module/openapi-annotations/plugin/src/test/resources/net/jacobpeterson/jet/openapiannotations/plugin/testproject/fail/couldnotbeinlined/src/main/java/Test.java
import net.jacobpeterson.jet.openapiannotations.annotation.OpenApi;
import org.jspecify.annotations.NullMarked;

@NullMarked
@OpenApi(rawJson = "[]")
public final class Test {}
